First taclet parse test works